add geodesic proximity function

--- a/scripts/install_bash_completions.cmake.in
+++ b/scripts/install_bash_completions.cmake.in
@@ -22,6 +22,7 @@ set(PROGRAMS
     gdalmove.py
     gdal_polygonize.py
     gdal_proximity.py
+    gdal_proximity_geodesic.py
     gdal_rasterize
     gdal_retile.py
     gdal_sieve.py
